# adbridge

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs
src/adb/: connection.rs  mod.rs
src/input/: mod.rs
src/logcat/: mod.rs
src/mcp/: mod.rs
src/screen/: mod.rs
src/state/: mod.rs
