[package]
name = "abridge"
version = "0.1.0"
edition = "2021"
description = "Android Bridge for AI-Assisted Development — CLI + MCP server"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP server (official Rust SDK)
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }

# ADB protocol (native, no adb binary needed)
adb_client = "3"

# OCR (tesseract FFI bindings)
leptess = "0.14"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image handling (for screenshot processing)
image = "0.25"

# XML parsing (for uiautomator view hierarchy)
quick-xml = { version = "0.37", features = ["serialize"] }

# Base64 (for encoding screenshots in MCP responses)
base64 = "0.22"

# Chrono (for timestamp handling in logcat)
chrono = { version = "0.4", features = ["serde"] }
