[package]
name = "adbridge"
version = "0.1.0"
edition = "2021"
description = "Android Bridge for AI-Assisted Development: CLI + MCP server"
license = "MIT"
repository = "https://github.com/Slush97/adbridge"
readme = "README.md"
keywords = ["android", "adb", "mcp", "ai", "debugging"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP server (official Rust SDK)
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }

# ADB protocol (native, no adb binary needed)
adb_client = "3"

# OCR (tesseract FFI bindings)
leptess = "0.14"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 (for encoding screenshots in MCP responses)
base64 = "0.22"

# XML parsing (for view hierarchy element extraction)
roxmltree = "0.20"
